src/index.css
/* ... */
/* Set core body defaults */
body {
  min-height: 100vh;
  text-rendering: optimizeSpeed;
  line-height: 1.5;
  font-size: 16px;
  font-family: var(--ff-body);
  overflow: hidden;
}

/* A elements that don't have a class get default styles */
a:not([class]) {
  text-decoration-skip-ink: auto;
}

/* Make images easier to work with */
img,
picture {
  max-width: 100%;
  display: block;
}

/* Inherit fonts for inputs and buttons */
input,
button,
textarea,
select {
  font: inherit;
}

/* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
@media (prefers-reduced-motion: reduce) {
  html:focus-within {
    scroll-behavior: auto;
  }

  *,
  *::before,
  *::after {
    animation-duration: 0.01ms !important;
    animation-iteration-count: 1 !important;
    transition-duration: 0.01ms !important;
    scroll-behavior: auto !important;
  }
}

/* Utility Classes */

/* font styles */
.heading-xl {
  font-weight: var(--fw-bold);
  font-size: var(--fs-500);
  line-height: var(--lh-30);
}
.heading-l {
  font-weight: var(--fw-bold);
  font-size: var(--fs-400);
  line-height: var(--lh-23);
}
.heading-m {
  font-weight: var(--fw-bold);
  font-size: var(--fs-300);
  line-height: var(--lh-19);
}
.heading-s {
  font-weight: var(--fw-bold);
  font-size: var(--fs-100);
  line-height: var(--lh-15);
  /* kerning */
}
.body-m {
  font-weight: var(--fw-medium);
  font-size: var(--fs-200);
  line-height: var(--lh-23);
}
.body-b {
  font-weight: var(--fw-bold);
  font-size: var(--fs-100);
  line-height: var(--lh-15);
}

/* buttons */
button:hover {
  cursor: pointer;
}

.btn-s {
  min-width: 255px;
  min-height: 40px;
  border: none;
  border-radius: 24px;
  font-size: var(--fs-100);
  font-weight: var(--fw-bold);
}

.btn-l {
  min-width: 255px;
  min-height: 48px;
  border: none;
  border-radius: 24px;
  font-size: var(--fs-300);
  font-weight: var(--fw-bold);
}

.btn-primary {
  color: var(--clr-neutral-100);
  background-color: var(--clr-primary-400);
}

.btn-primary:hover {
  background-color: var(--clr-primary-300);
}

.btn-secondary {
  background-color: var(--clr-primary-100);
  color: var(--clr-primary-400);
}
.btn-secondary:hover {
  background-color: var(--clr-primary-200);
}

.btn-secondary:hover {
  background-color: var(--clr-primary-200);
}

.btn-destructive {
  color: var(--clr-neutral-100) !important;
  background-color: var(--clr-secondary-400) !important;
}
.btn-destructive:hover {
  background-color: var(--clr-secondary-300) !important;
}

.error-alert {
  color: red;
}

/* modal class to center any modal elements on screen */
.modal {
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  z-index: 99999;
  min-height: fit-content;
  max-height: 80vh;
  overflow-y: auto;
  overflow-x: hidden;
}

/* custom checkboxes */
input[type="checkbox"] {
  appearance: none;
  min-width: 16px;
  min-height: 16px;
  border-radius: 2px;
  background-color: var(--clr-neutral-100);
  border: 1px solid var(--clr-neutral-400);
}

input[type="checkbox"]:checked {
  background: url("./assets/icon-check.svg");
  background-repeat: no-repeat;
  background-size: 10px;
  background-position: center;
  background-color: var(--clr-primary-400);
}

/* custom drop-down with chevron */
select {
  appearance: none;
  background-image: url("./assets/icon-chevron-down.svg");
  background-repeat: no-repeat;
  background-position: right 5% top 50%;
  background-size: 10px;
  border-radius: 5px;
}

/* border and font size on input, textarea, select */
input,
textarea,
select {
  border: 1px solid var(--clr-neutral-400);
  font-size: var(--fs-200);
  font-weight: var(--fw-medium);
}

textarea {
  padding: 8px 14px;
}

select {
  width: 100%;
  height: 40px;
  padding: 8px 14px;
}

input::placeholder,
textarea::placeholder {
  color: var(--clr-neutral-350);
}

/* basic and mobile styling */

.App {
  background-color: var(--clr-neutral-200);
  min-height: 100vh;
  min-width: fit-content;
  display: flex;
  flex-direction: column;
  transition: 0.5s;
}
.App.dark {
  background-color: var(--clr-neutral-700);
  transition: 0.5s;
}

#modal-background {
  /* ensure entire viewport is covered with position fixed! */
  position: fixed;
  background-color: rgba(0, 0, 0, 0.3);
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: 99999;
}

#empty-board {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 10px;
  height: calc(100vh - 60px);
  transition: 0.5s;
}

#empty-board h1 {
  text-align: center;
  padding: 0.5em;
}

#empty-board.dark {
  color: var(--clr-neutral-100);
}

#edit-delete-box .options-wrapper {
  position: relative;
}

#edit-delete-box .edit-delete {
  background: none;
  border: none;
  min-width: 10px;
}
#edit-delete-box .edit-delete:hover {
  cursor: pointer;
}

#edit-delete-box .edit-delete-wrapper {
  position: absolute;
  height: 94px;
  width: 192px;
  padding: 16px;
  border-radius: 5px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  gap: 16px;
  z-index: 9999;
  background-color: var(--clr-neutral-300);
  right: 1em;
  margin-top: 10px;
}

#edit-delete-box .edit-delete-wrapper.dark {
  background-color: var(--clr-neutral-700);
}

#edit-delete-box .edit-task,
#edit-delete-box .delete-task {
  background: none;
  border: none;
  text-align: left;
}

#edit-delete-box .edit-task {
  color: var(--clr-neutral-400);
}
#edit-delete-box .delete-task {
  color: var(--clr-secondary-400);
}

#task-preview-card {
  height: fit-content;
  width: 280px;
  border-radius: 10px;
  display: flex;
  flex-direction: column;
  gap: 8px;
  padding: 23px 16px;
  box-shadow: 2px 5px 5px var(--clr-neutral-300);
  background-color: var(--clr-neutral-100);
  transition: 0.5s;
}

#task-preview-card h2 {
  color: var(--clr-neutral-400);
}

#task-preview-card.dark {
  background-color: var(--clr-neutral-600);
  box-shadow: 2px 5px 5px var(--clr-neutral-500);
  transition: 0.5s;
}
/* ... */

